# Django-Carros-API

./: .gitignore  README.md  carros_uwsgi.ini  db.sqlite3  pyproject.toml
.qwen/: settings.json
accounts/: views.py
accounts/templates/: register.html
app/: settings.py  urls.py
app/templates/: base.html
cars/: admin.py  forms.py  models.py  signals.py  views.py
cars/migrations/: 0001_initial.py  0002_brand_alter_car_brand.py  0003_car_photo_car_plate.py  0004_carinventory.py  0005_car_bio.py
cars/templates/: car_detail.html  cars.html  new_car.html
groq_ai/: client.py
