[tool.poetry]
name = "django-carros-api"
version = "0.1.0"
description = ""
authors = ["lphillipe <luisphillipe200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
pillow = "^12.1.1"
groq = "^1.1.2"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.11"
uwsgi = "^2.0.31"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
